force-app/main/default/objects/Account_Site_Page__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Site Pages</relationshipLabel>
    <relationshipName>Account_Site_Pages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>