force-app/main/default/objects/Account_Site_Page__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If active, content is displayed on the page. When inactive, the public page provides a Page Not Found to the user.</description>
    <inlineHelpText>If active, content is displayed on the page. When inactive, the public page provides a Page Not Found to the user.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>