force-app/main/default/objects/Account_Site_Page__c/fields/Header_Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_Preview__c</fullName>
    <formula>IMAGE(Header_Image_URL__c, &quot;Header Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Header Image Preview</label>
    <type>Text</type>
</CustomField>