force-app/main/default/objects/Account_Site_Page__c/fields/Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_URL__c</fullName>
    <description>Image URL for a publicly accessible image authorized for display to external users. Recommended specifications: 1390 x 340</description>
    <inlineHelpText>Image URL for a publicly accessible image authorized for display to external users. Recommended specifications: 1390 x 340</inlineHelpText>
    <label>Header Image URL</label>
    <type>Url</type>
</CustomField>