force-app/main/default/objects/Account_Site_Page__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <formula>$CustomMetadata.External_Site_Setting__mdt.Default.Site_URL__c &amp; &quot;/&quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page URL</label>
    <type>Text</type>
</CustomField>