force-app/main/default/objects/Account_Site_Page__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this page is visible to guest users</description>
    <inlineHelpText>If checked, this page is visible to guest users</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>