force-app/main/default/objects/Account_Site_Page__c/fields/Show_Guest_Pass_Form__c.field-meta.xml
<CustomField>
    <fullName>Show_Guest_Pass_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a signup form will be displayed to page visitors allowing them to receive a guest pass to Asphalt Green</description>
    <inlineHelpText>If checked, a signup form will be displayed to page visitors allowing them to receive a guest pass to Asphalt Green</inlineHelpText>
    <label>Show Guest Pass Form</label>
    <type>Checkbox</type>
</CustomField>