force-app/main/default/objects/Account_Site_Page__c/fields/Show_Image_Gallery__c.field-meta.xml
<CustomField>
    <fullName>Show_Image_Gallery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the page will include an image gallery of Asphalt Green facility stunners</description>
    <inlineHelpText>If checked, the page will include an image gallery of Asphalt Green facility stunners</inlineHelpText>
    <label>Show Image Gallery</label>
    <type>Checkbox</type>
</CustomField>