force-app/main/default/objects/Account_Site_Page__c/fields/Show_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Show_Page_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Account Site Page Name will be displayed over the header image</description>
    <inlineHelpText>If checked, the Account Site Page Name will be displayed over the header image</inlineHelpText>
    <label>Show Page Title</label>
    <type>Checkbox</type>
</CustomField>