force-app/main/default/objects/Account_Site_Page__c/fields/Show_Public_Files__c.field-meta.xml
<CustomField>
    <fullName>Show_Public_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, files related to this page with public visibility will be displayed on the page</description>
    <inlineHelpText>If checked, files related to this page with public visibility will be displayed on the page</inlineHelpText>
    <label>Show Public Files</label>
    <type>Checkbox</type>
</CustomField>