force-app/main/default/objects/Account_Site_Page__c/fields/Show_Resources__c.field-meta.xml
<CustomField>
    <fullName>Show_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Site Page Resources related to this page will be displayed</description>
    <inlineHelpText>If checked, Site Page Resources related to this page will be displayed</inlineHelpText>
    <label>Show Resources</label>
    <type>Checkbox</type>
</CustomField>