force-app/main/default/objects/Account_Site_Page__c/fields/Show_Video_Player__c.field-meta.xml
<CustomField>
    <fullName>Show_Video_Player__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked a video player will be displayed on the page</description>
    <inlineHelpText>If checked a video player will be displayed on the page</inlineHelpText>
    <label>Show Video Player</label>
    <type>Checkbox</type>
</CustomField>