force-app/main/default/objects/Account_Site_Page__c/fields/Sidebar_Content__c.field-meta.xml
<CustomField>
    <fullName>Sidebar_Content__c</fullName>
    <label>Sidebar Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>