force-app/main/default/objects/Account_Site_Page__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of page. Governs the layout template for the page.</description>
    <inlineHelpText>The type of page. Governs the layout template for the page.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Community Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>