force-app/main/default/objects/Account_Site_Page__c/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>The URL of the YouTube video</description>
    <inlineHelpText>The URL of the YouTube video</inlineHelpText>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>