force-app/main/default/objects/Account_Site_Page__c/validationRules/Video_Player_Requires_Video_Url.validationRule-meta.xml
<ValidationRule>
    <fullName>Video_Player_Requires_Video_Url</fullName>
    <active>true</active>
    <description>If Show Video Player is checked, a Video URL must be provided</description>
    <errorConditionFormula>AND(
  Show_Video_Player__c ,
  ISBLANK( Video_URL__c )
)</errorConditionFormula>
    <errorDisplayField>Video_URL__c</errorDisplayField>
    <errorMessage>If Show Video Player is checked, a Video URL must be provided</errorMessage>
</ValidationRule>